Removed unneeded js now that ajax is gone Adjusted some styling Let menu scroll when there are too many filters Fixed php error

--- a/source/themes/custom/gearwrench/styles/libraries/node/full--product-category.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--product-category.scss
@@ -95,6 +95,7 @@
         box-shadow: 0rem 0rem 3rem 5rem rgba(0, 0, 0, 0.6);
         bottom: 0;
         left: 15vw;
+        overflow: scroll;
         padding-top: 75px;
         padding-left: 1rem;
         position: fixed;
@@ -125,7 +126,7 @@
           display: flex;
           height: 3rem;
           justify-content: space-between;
-          max-width: 85%;
+          max-width: 93%;
         }
 
         .mobile-close-icon {
