Added style for hero slide thumbnail image,  updated preprocess to add hero image and check for other images, added and updated view displays for search index

--- a/source/themes/custom/gearwrench/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/search-index.scss
@@ -65,6 +65,15 @@
       }
     }
 
+    .node__media--with-media:not(node__listing-image) {
+      .media {
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+
     .node__content-container {
       padding: 1rem;
 
