--- a/docroot/themes/custom/gearwrench/templates/node/node--tile.html.twig
+++ b/docroot/themes/custom/gearwrench/templates/node/node--tile.html.twig
@@ -77,7 +77,7 @@
         <div{{ media_attributes }}>
           {{ content }}
         </div>
-        <div class="btn node__product-category-grid-title">
+        <div class="btn node__grid-title">
           {{ label }}
         </div>
       </a>
