updated red primary color

--- a/source/themes/custom/crescenttool/styles/abstracts/variables/_colors.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/variables/_colors.scss
@@ -14,7 +14,7 @@ $color-blue: #0080FF;
 $color-dark-blue: #0055A9;
 
 // Primary - Rawhide Red
-$primary-red: #CA3604;
+$primary-red: #DA4D1F;
 $primary-dark: #A02A03;
 $primary-dark2: #8C2503;
 $primary-light: #DF663D;
