--- a/source/themes/custom/gearwrench/styles/libraries/node/full--product-category.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--product-category.scss
@@ -92,7 +92,7 @@
         display: flex;
         flex-direction: column;
         background-color: #FFFFFF;
-        box-shadow: 0rem 0rem 3rem 5rem rgba(0, 0, 0, 0.6);
+        box-shadow: 0 0 3rem 5rem rgba(0, 0, 0, 0.6);
         bottom: 0;
         left: 15vw;
         overflow: scroll;
