--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--content.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--content.scss
@@ -207,3 +207,19 @@
     }
   }
 }
+
+// classy paragraph cta styles
+.button-cta {
+  .component-content__link.button {
+    @include btn-reset();
+    @include btn-base();
+    display: inline-flex;
+    margin-top: 2rem;
+  }
+}
+
+.text-cta {
+  .component-content__link.button {
+    @include btn(secondary);
+  }
+}
