Added missing border styling to primary button CTAs

--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--content.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--content.scss
@@ -215,6 +215,9 @@
     @include btn-base();
     display: inline-flex;
     margin-top: 2rem;
+    &:hover {
+      border: 1px solid $primary-orange !important;
+    }
   }
 }
 
