VYRKCATG-130 - GW: Enhancement: Warranty Form Products
- added max width to the warranty product autocomplete, mobile only

--- a/source/themes/custom/gearwrench/styles/base/_base.scss
+++ b/source/themes/custom/gearwrench/styles/base/_base.scss
@@ -101,6 +101,14 @@ body:not(.keyboard-activated) *:focus {
     width: 50px;
     max-width: 50px;
   }
+
+  //fixing product autocomplete style on mobile
+  .ui-widget.ui-widget-content {
+    max-width: calc(100% - 4rem);
+    @include media('>md') {
+      max-width: none;
+    }
+  }
 }
 
 img {
