--- a/source/themes/custom/gearwrench/styles/base/_base.scss
+++ b/source/themes/custom/gearwrench/styles/base/_base.scss
@@ -95,7 +95,7 @@ body:not(.keyboard-activated) *:focus {
   // custom loader styles
   .media--loading:not([data-animation])::before,
   .is-b-loading:not([data-animation])::before {
-    background: url("../../gearwrench/images/GW_Airfoil_OR_BL.png") center no-repeat;
+    background: url('../../gearwrench/images/GW_Airfoil_OR_BL.png') center no-repeat;
     background-size: contain;
     height: 50px;
     width: 50px;
