NewProductsFilter: Hiding the filter icon until we get it working.

--- a/source/themes/custom/gearwrench/styles/libraries/view/new-products.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/view/new-products.scss
@@ -36,7 +36,8 @@
       @include icon('filter', after);
 
       cursor: pointer;
-      display: inline-block;
+      //display: inline-block;
+      display: none;
       font-size: 18px;
       margin-right: 20px;
     }
