Updated logos, Removed GW logo on CT, Added CT logo, changed related products slider to loop, updated and added header size var, updated css,

--- a/docroot/themes/custom/crescenttool/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/crescenttool/templates/node/node--product--full.html.twig
@@ -142,7 +142,7 @@
           <div class="node--type-product-tabs__nav-logo-wrapper">
 
             <a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home" class="site-logo">
-              {% include directory ~ '/icons/logo.svg' %}
+              {% include directory ~ '/icons/logo-red-white.svg' %}
             </a>
           </div>
           <ul class="node--type-product-tabs__nav">
@@ -198,7 +198,7 @@
         <div class="node--type-product-related-products__nav-wrapper">
           <div class="node--type-product-related-products__nav-logo-wrapper">
             <a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home" class="site-logo">
-              {% include directory ~ '/icons/logo.svg' %}
+              {% include directory ~ '/icons/logo-red-white.svg' %}
             </a>
           </div>
           <div class="node--type-product-related-products__nav-content">
