--- a/source/themes/custom/crescenttool/styles/abstracts/variables/_header.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/variables/_header.scss
@@ -5,9 +5,10 @@
 
 $header-padding: 1.5rem;
 $header-padding-mobile: 1.5rem;
-$header-logo-height: 2rem;
+$header-logo-height: 1.25rem;
+$header-logo-height-large: 2rem;
 $header-logo-height-mobile: 1.25rem;
 
-$header-height-small: $header-padding + $header-logo-height;
+$header-height-small: $header-padding + .5rem + $header-logo-height;
 $header-height: $header-padding + $header-padding + $header-logo-height;
 $header-height-mobile: $header-padding-mobile + $header-padding-mobile + $header-logo-height-mobile;
