--- a/source/themes/custom/crescenttool/styles/libraries/view/related-products.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/view/related-products.scss
@@ -68,17 +68,17 @@
         padding: 0;
         opacity: 1;
 
-        &:hover {
+        @include on-event {
           background-color: $color-black;
           border-color: $primary-red;
         }
 
         &.view-related-products-slider__button-prev {
-          background-image: url('../../../icons/chevron-left-black.svg');
+          background-image: url('../../../icons/chevron-left-white.svg');
           left: rem(-98px);
 
           &:hover {
-            background-image: url('../../../icons/chevron-left-molten-orange.svg');
+            background-image: url('../../../icons/chevron-left-red.svg');
           }
 
           @include media('<1401px') {
@@ -91,11 +91,11 @@
         }
 
         &.view-related-products-slider__button-next {
-          background-image: url('../../../icons/chevron-right-black.svg');
+          background-image: url('../../../icons/chevron-right-white.svg');
           right: rem(-98px);
 
           &:hover {
-            background-image: url('../../../icons/chevron-right-molten-orange.svg');
+            background-image: url('../../../icons/chevron-right-red.svg');
           }
 
           @include media('<1400px') {
