--- a/source/themes/custom/gearwrench/styles/libraries/node/full--product-category.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--product-category.scss
@@ -103,7 +103,7 @@
         right: 0;
         width: 85vw;
         z-index: 499;
-    
+
         &.hide {
           display: none;
           z-index: -5;
@@ -134,7 +134,7 @@
           width: 2rem;
 
           &::before {
-            font-family: "themeIcons";
+            font-family: 'themeIcons';
             content: icon-char('close');
           }
         }
@@ -241,7 +241,7 @@
             visibility: hidden;
           }
         }
-        
+
       }
 
       .view-content {
