--- a/source/themes/custom/gearwrench/styles/libraries/media/product-detail-slider__remote-video.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/media/product-detail-slider__remote-video.scss
@@ -15,7 +15,7 @@
  */
 .product-detail-slider {
   figure.media--type-remote-video {
-    background-color: white;
+    background-color: $white;
     padding-bottom: 25%;
     padding-top: 25%;
   }
