Brought over templates and scss files from GW that are used on the Search page Made adjustments to match CT styles

--- a/source/themes/custom/crescenttool/styles/libraries/block/breadcrumbs.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/block/breadcrumbs.scss
@@ -6,6 +6,7 @@
 
 .block-system-breadcrumb-block {
   font-size: 1rem;
+  padding-top: 3rem;
 
   .block-system-breadcrumb-block__content {
     &:empty {
