--- a/source/themes/custom/crescenttool/styles/base/_inputs.scss
+++ b/source/themes/custom/crescenttool/styles/base/_inputs.scss
@@ -171,7 +171,7 @@ $active-gap: 8px; // the math likes px values
   input[type='radio']:checked + label:before,
   input[type='radio']:not(:checked) + label:before {
     background: $white;
-    border: 1px solid $gray-40;
+    border: 1px solid $secondary-black;
     content: '';
     height: $active-width;
     left: 0;
