--- a/source/themes/custom/crescenttool/styles/libraries/node/search-index--product.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/search-index--product.scss
@@ -93,60 +93,51 @@
         font-size: rem(12px);
       }
     }
-  
+  }
 
-    .node__buy-now-button {
-      @include btn(primary);
+  .node__buy-now-button {
+    @include btn(primary);
 
-      box-sizing: border-box;
-      display: inline-block !important;
-      float: none;
-      font-size: 1rem !important;
-      transition: $transition-base;
-      width: 100%;
-      border: 1px solid $primary-red;
-      border-top-left-radius: unset;
-      border-top-right-radius: unset;
-      white-space: normal;
-      min-width: 100%;
-      border-bottom-left-radius: rem(25px);
-      border-bottom-right-radius: rem(25px);
+    box-sizing: border-box;
+    display: inline-block !important;
+    float: none;
+    font-size: 1rem !important;
+    transition: $transition-base;
+    width: 100%;
+    border: 1px solid $primary-red;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    white-space: normal;
+    min-width: 100%;
+    border-bottom-left-radius: rem(25px);
+    border-bottom-right-radius: rem(25px);
 
-      @include media('<md') {
-        font-size: rem(13px) !important;
-      }
+    @include media('<md') {
+      font-size: rem(13px) !important;
+    }
 
-      background-color: $gray-50;
-      border-color: $gray-50;
-
-      > small {
-        line-height: 1.625;
-        font-weight: $fw-bold;
-
-        &:hover,
-        &:focus {
-          color: $white;
-          font-weight: $fw-bold;
-        }
-      }
+    > small {
+      line-height: 1.625;
+      font-weight: $fw-bold;
 
       &:hover,
       &:focus {
-        background-color: $gray-50;
+        color: $white;
+        font-weight: $fw-bold;
       }
     }
 
     &:hover,
     &:focus {
-      color: $primary-red;
-      background-color: $gray-20;
-      border-width: 1px;
+      background-color: $gray-50;
+      border-radius: 0;
       border-bottom-left-radius: rem(25px);
       border-bottom-right-radius: rem(25px);
+      color: $primary-red;
+      font-family: 'Industry';
+      font-weight: $fw-bold;
     }
   }
-
-
 
   @include on-event {
     .node__content {
