VYRKCATG-294-ct-gw-update-to-brochure-images-on-cards
- copied over teaser preprocess from GW to CT
- updated the teaser on GW and CT to contain the thumbnail to the container and give it a black background
- added new media page teaser image style configs

--- a/source/themes/custom/crescenttool/styles/libraries/node/teaser--media-page.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/teaser--media-page.scss
@@ -41,6 +41,7 @@
       }
 
       .media {
+        background-color: $black;
         display: flex;
         position: relative;
         padding-top: 100%;
@@ -58,7 +59,7 @@
         }
 
         img {
-          object-fit: cover;
+          object-fit: contain;
         }
       }
     }
